--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/css-doodle/0.38.4/css-doodle.min.js"></script>
+</head>
 <body>
-<h1>Her er min webside!</h1>
-<p>Dette er bare en test</p>
+
+<css-doodle>
+	:doodle {
+	@grid: 10x10;
+	@size: 100vmax;
+	grid-gap: 1px;
+	}
+	
+	background-color: forestgreen;
+	background-color: hsla(@r(360), 85%, @r(70%, 90%), @r(.9));
+	transform: scale(@rand(.1, 1.75));
+	border-radius: @rand(0, 100%);
+	transform: translate3d( @r(0%, 150%), @r(0%, 150%));
+	
+</css-doodle>
 </body>
