--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 	@grid: 10x10;
 	@size: 100vmax;
 	grid-gap: 1px;
+
+	animation: test infinite @r(50s, 150s) linear;
+	
+	@keyframes test {
+		0% {
+			transform: translate3d(@r(0, 0, 0));
+		}
+		50% {
+			transform: translate3d(@r(-500%, 1000%), @r(-500%, 1000%), 0);
+		}
+		100% {
+			transform: translate3d(0, 0, 0);
+		}
 	}
 	
 	background-color: forestgreen;
